--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -14,6 +14,9 @@
     </style>
   </head>
   <body>
-    <h1>{{header}}</h1>
+    <h1>Bluetooth Pairing</h1>
+    <form action="" method="POST">
+      <button>{{action}}</button>
+    </form>
   </body>
 </html>
